# opendataUA-nas

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  setup.sh  update.sh
.github/workflows/: build-release.yml
data/: config.example.json
docs/: 更新容器.md  重建容器.md
server/: opcua_server.py
webui/: app.py
webui/static/: index.html
